@@ -5,3 +5,4 @@
 [+] Added Super Metroid (Thanks for the suggestion Adon!)
 [+] Added Wheely 1-8 (Thanks for the suggestion Koda!)
 [+] Added Yo-Kai Watch (Thanks for the suggestion M.h)
+[+] Fixed Run 'n' Gun having a gun image. I assumed this was a gun game and not a football game, sorry, lol. It's now under the 'Sports' category
